Upgrade Xamarin.Forms to 5.0 (#287)
* Upgrade Xamarin.Forms to 5.0
* Regenerate elements, replace MasterDetailPage with FlyoutPage.
* Install Android SDK 29 on CI
* Update templates to use same version of Xamarin.Forms

Co-authored-by: Eilon Lipton <Eilon@users.noreply.github.com>

--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -9,6 +9,12 @@ steps:
     TeamName: $(_TeamName)
   condition: ne(variables['Build.Reason'], 'PullRequest')
 
+- task: BatchScript@1
+  displayName: 'Install Android SDK'
+  inputs:
+    filename: './azure-pipelines/install-android-sdk.cmd'
+    #arguments: '' # Optional
+
 # Note: 2019-12 Even though 'dotnet build' can build this, it's not compatible with MicroBuild Signing. Must use MSBuild.
 - task: MSBuild@1
   displayName: 'Build src projects'
