--- a/samples/MobileBlazorBindingsAuthSample/MobileBlazorBindingsAuthSample.iOS/MobileBlazorBindingsAuthSample.iOS.csproj
+++ b/samples/MobileBlazorBindingsAuthSample/MobileBlazorBindingsAuthSample.iOS/MobileBlazorBindingsAuthSample.iOS.csproj
@@ -122,8 +122,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre5" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MobileBlazorBindingsAuthSample\MobileBlazorBindingsAuthSample.csproj">
