--- a/samples/MobileBlazorBindingsAuthSample/MobileBlazorBindingsAuthSample/MobileBlazorBindingsAuthSample.csproj
+++ b/samples/MobileBlazorBindingsAuthSample/MobileBlazorBindingsAuthSample/MobileBlazorBindingsAuthSample.csproj
@@ -11,8 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre5" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.10" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.10" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
