--- a/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo.iOS/MobileBlazorBindingsTodo.iOS.csproj
+++ b/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo.iOS/MobileBlazorBindingsTodo.iOS.csproj
@@ -130,8 +130,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre5" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
