--- a/samples/MobileBlazorBindingsWeather/MobileBlazorBindingsWeather/MobileBlazorBindingsWeather.csproj
+++ b/samples/MobileBlazorBindingsWeather/MobileBlazorBindingsWeather/MobileBlazorBindingsWeather.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre5" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
   </ItemGroup>
 
   <ItemGroup>
