--- a/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
+++ b/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
@@ -8,8 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.7.0" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre5" />
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
   </ItemGroup>
 
 </Project>
