--- a/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
+++ b/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Title>Protected storage for Mobile Blazor Bindings applications</Title>
+    <Description>Protected storage for Mobile Blazor Bindings applications.</Description>
+    <PackageTags>blazor;mobileblazorbindings</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,4 +15,9 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
   </ItemGroup>
 
+  <ItemGroup>
+    <FilesToSign Include="$(OutDir)\Microsoft.MobileBlazorBindings.ProtectedStorage.dll">
+      <Authenticode>Microsoft400</Authenticode>
+    </FilesToSign>
+  </ItemGroup>
 </Project>
