--- a/src/ComponentWrapperGenerator/ComponentWrapperGenerator.csproj
+++ b/src/ComponentWrapperGenerator/ComponentWrapperGenerator.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,7 +32,7 @@
   <Target Name="CopyXmlDocsToOutput" AfterTargets="Build">
     <Message Text="Xamarin.Forms package location: $(PkgXamarin_Forms)" />
     <Copy SourceFiles="$(PkgXamarin_Forms)\lib\netstandard2.0\Xamarin.Forms.Core.xml" DestinationFolder="$(OutDir)" />
-    
+
     <!-- Xamarin.Forms.DualScreen doesn't have any XML docs at this time -->
     <!--<Message Text="Xamarin.Forms.DualScreen package location: $(PkgXamarin_Forms_DualScreen)" />
     <Copy SourceFiles="$(PkgXamarin_Forms_DualScreen)\lib\netstandard2.0\Xamarin.Forms.DualScreen.xml" DestinationFolder="$(OutDir)" />-->
