--- a/samples/HybridAuthSample/HybridAuthApp/HybridAuthApp.csproj
+++ b/samples/HybridAuthSample/HybridAuthApp/HybridAuthApp.csproj
@@ -14,8 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.10" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.19" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.19" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.19" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
