--- a/src/Microsoft.MobileBlazorBindings.WebView.iOS/Microsoft.MobileBlazorBindings.WebView.iOS.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.iOS/Microsoft.MobileBlazorBindings.WebView.iOS.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.7.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
     <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
       <PrivateAssets>all</PrivateAssets>
