--- a/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
+++ b/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.7.0" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.7.2" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
