--- a/src/Microsoft.MobileBlazorBindings.WebView/Microsoft.MobileBlazorBindings.WebView.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView/Microsoft.MobileBlazorBindings.WebView.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.19" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.19" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.19" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.7.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
     <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
       <PrivateAssets>all</PrivateAssets>
