--- a/src/Microsoft.MobileBlazorBindings.SkiaSharp/Microsoft.MobileBlazorBindings.SkiaSharp.csproj
+++ b/src/Microsoft.MobileBlazorBindings.SkiaSharp/Microsoft.MobileBlazorBindings.SkiaSharp.csproj
@@ -1,28 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Title>Experimental binding of Skia Sharp in Mobile Blazor Bindings</Title>
-    <Description>Support for Skia Sharp for Experimental Mobile Blazor Bindings.</Description>
-    <PackageTags>blazor;mobileblazorbindings;SkiaSharp;</PackageTags>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net6.0-android</TargetFrameworks>
+		<!--<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) and '$(MSBuildRuntimeType)' == 'Full'">$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks>-->
+		<UseMaui>true</UseMaui>
+		<Title>Experimental binding of Skia Sharp in Mobile Blazor Bindings</Title>
+		<Description>Support for Skia Sharp for Experimental Mobile Blazor Bindings.</Description>
+		<PackageTags>blazor;mobileblazorbindings;SkiaSharp;</PackageTags>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.2" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.MobileBlazorBindings\Microsoft.MobileBlazorBindings.csproj" />
-  </ItemGroup>
+		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.0-preview.140" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <FilesToSign Include="$(OutDir)\Microsoft.MobileBlazorBindings.SkiaSharp.dll">
-      <Authenticode>Microsoft400</Authenticode>
-    </FilesToSign>
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Microsoft.MobileBlazorBindings\Microsoft.MobileBlazorBindings.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<FilesToSign Include="$(OutDir)\Microsoft.MobileBlazorBindings.SkiaSharp.dll">
+			<Authenticode>Microsoft400</Authenticode>
+		</FilesToSign>
+	</ItemGroup>
 </Project>
