--- a/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
+++ b/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
@@ -7,6 +7,11 @@
 		<PackageTags>blazor;mobileblazorbindings</PackageTags>
 
 		<SignAssembly>true</SignAssembly>
+
+		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-ios'">14.2</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-maccatalyst'">14.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">21.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.18362.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
