--- a/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
+++ b/src/Microsoft.MobileBlazorBindings.ProtectedStorage/Microsoft.MobileBlazorBindings.ProtectedStorage.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
