--- a/src/Microsoft.MobileBlazorBindings.SkiaSharp/Microsoft.MobileBlazorBindings.SkiaSharp.csproj
+++ b/src/Microsoft.MobileBlazorBindings.SkiaSharp/Microsoft.MobileBlazorBindings.SkiaSharp.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-android</TargetFrameworks>
-		<!--<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) and '$(MSBuildRuntimeType)' == 'Full'">$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks>-->
+		<TargetFrameworks>net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst;net6.0-windows10.0.19041</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<Title>Experimental binding of Skia Sharp in Mobile Blazor Bindings</Title>
 		<Description>Support for Skia Sharp for Experimental Mobile Blazor Bindings.</Description>
 		<PackageTags>blazor;mobileblazorbindings;SkiaSharp;</PackageTags>
+
+		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.18362.0</SupportedOSPlatformVersion>
+		<TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.18362.0</TargetPlatformMinVersion>		
 	</PropertyGroup>
 
 	<ItemGroup>
