--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,22 +15,27 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0        
-    - name: Install .NET 6.0.300-preview.22204.3
+    - name: Install .NET 6.0.300
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.300-preview.22204.3'
+        dotnet-version: '6.0.300'
         include-prerelease: true
     - name: Install MAUI
       run: |
         dotnet workload install maui `
-        --from-rollback-file https://aka.ms/dotnet/maui/main.json `
-        --source https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-a21b9a2d/nuget/v3/index.json `
-        --source https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-52e9452f-3/nuget/v3/index.json `
-        --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet6/nuget/v3/index.json `
-        --source https://api.nuget.org/v3/index.json
+          --from-rollback-file https://aka.ms/dotnet/maui/main.json `
+          --source https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-a21b9a2d/nuget/v3/index.json `
+          --source https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-52e9452f-3/nuget/v3/index.json `
+          --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet6/nuget/v3/index.json `
+          --source https://api.nuget.org/v3/index.json
     - name: Restore dependencies
       run: dotnet restore BlazorBindings.Maui.sln
-    - name: Build
+    - name: Build templates
+      run: |
+        cd templates
+        dotnet build -c Release
+        cd ..
+    - name: Pack nugets
       run: dotnet pack -o ./packages -c Release
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
