--- a/src/BlazorBindings.Maui.SkiaSharp/BlazorBindings.Maui.SkiaSharp.csproj
+++ b/src/BlazorBindings.Maui.SkiaSharp/BlazorBindings.Maui.SkiaSharp.csproj
@@ -7,6 +7,13 @@
 		<Title>Experimental binding of Skia Sharp in Maui Blazor Bindings</Title>
 		<Description>Support for Skia Sharp for Maui Blazor Bindings.</Description>
 		<PackageTags>blazor;blazorbindings;SkiaSharp;</PackageTags>
+
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">23.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
+		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,7 +21,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<!--Added due to dotnet build issues. Remove after MAUI update. -->
+		<PackageReference Include="Microsoft.Maui.Extensions" Version="6.0.300-rc.3.5667" />
+		<PackageReference Include="Microsoft.Maui.Dependencies" Version="6.0.300-rc.3.5667" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\BlazorBindings.Maui\BlazorBindings.Maui.csproj" />
 	</ItemGroup>
-	
+
 </Project>
