Add a workaround for sdk issue (#108)

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,9 @@ jobs:
         dotnet build -c Release --no-restore
         cd ..
     - name: Pack nugets
-      run: dotnet pack -o ./packages -c Release --no-restore
+      run: |
+        $path = [System.IO.Path]::GetFullPath("packages")
+        dotnet pack --property PackageOutputPath=$path -c Release --no-restore
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
