--- a/samples/ThirdPartyControlsSample/ThirdPartyControlsSample.csproj
+++ b/samples/ThirdPartyControlsSample/ThirdPartyControlsSample.csproj
@@ -8,6 +8,7 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<EnablePreviewFeatures>true</EnablePreviewFeatures>
+		<GenerateRequiresPreviewFeaturesAttribute>true</GenerateRequiresPreviewFeaturesAttribute>
 
 		<!-- Display name -->
 		<ApplicationTitle>ThirdPartyControlsSample</ApplicationTitle>
