--- a/src/BlazorBindings.UnitTests/BlazorBindings.UnitTests.csproj
+++ b/src/BlazorBindings.UnitTests/BlazorBindings.UnitTests.csproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
 	<UseMaui>true</UseMaui>
 	<EnablePreviewFeatures>true</EnablePreviewFeatures>
+	<GenerateRequiresPreviewFeaturesAttribute>true</GenerateRequiresPreviewFeaturesAttribute>
   </PropertyGroup>
 	
   <ItemGroup>
