Fix namespace in test app, test attachment

--- a/src/BlazorBindings.Avalonia.HelloWorld/BlazorBindings.Avalonia.HelloWorld.csproj
+++ b/src/BlazorBindings.Avalonia.HelloWorld/BlazorBindings.Avalonia.HelloWorld.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+
+	<RootNamespace>BlazorBindings.AvaloniaBindings.HelloWorld</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
