First working implementation for simple cases, fix root namespace, fix root namespace

--- a/src/BlazorBindings.Avalonia.HelloWorld/BlazorBindings.Avalonia.HelloWorld.csproj
+++ b/src/BlazorBindings.Avalonia.HelloWorld/BlazorBindings.Avalonia.HelloWorld.csproj
@@ -28,5 +28,11 @@
       <DependentUpon>App.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="SubPage.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
   
 </Project>
